src/yini_test/cases/golden/strict/valid/strings/c-triple-quoted-with-escapes.strict.yini
@yini strict

^ Strings
message = C"""tab:\there"""

/END
