src/yini_test/cases/golden/strict/invalid/keys/key-using-colon.strict.yini
@yini strict

key: value

/END
